# Janus

./: .gitignore  CMakeLists.txt  Dockerfile  README_Mihai_dissertation  run_container.sh  run_make
comet_benchmark/con_comps/src/: template_con_comps.cpp
comet_benchmark/expr_evaluator/src/: template_evaluator.cpp
comet_benchmark/file_system_interaction/src/: template_fs_interaction.cpp
comet_benchmark/matrix_mult/src/: template_matrix_mult.cpp
comet_benchmark/merge_sort/src/: template_merge_sort.cpp
comet_benchmark/pi_approximation/src/: template_approx_pi.cpp
comet_benchmark/vector/src/: template_vector.cpp
comet_evaluator/: _run_error_detection_tests.py  generate_results_for_notebook.py  parse_results.py  parse_results_for_error_detection.py  rebuild.py  rebuild_for_error_detection.py  run_all_tests.py  run_all_tests_for_error_detection.py  run_error_detection_tests.py  run_tests.py  run_tests_for_error_detection.py  test_generator.py
comet_evaluator/expr_input/: expr_generator.py
comet_evaluator/fs_interaction_files/: input_generator.py
dynamic/: CMakeLists.txt
dynamic/core/: front_end.cpp  front_end.h  handler.c
dynamic/dsl/: CMakeLists.txt  dsl_core.cpp  dsl_debug_utilities.cpp  dsl_debug_utilities.h  dsl_error_insertion.cpp  dsl_error_insertion.h  dsl_handler.cpp  dsl_handler.h  dsl_ipc.cpp  dsl_ipc.h  dsl_thread_manager.cpp  dsl_thread_manager.h  func.cpp  func.h  util.cpp  util.h
dynamic/parallel/: core.c  jthread.c
janus/: janus_header  jdsl_run  jpar_dyn  run-many.sh  run_polybench_test.sh
static/schedgen/: SchedGen.cpp
(+3 files in other folders)
